Crear las clases auxiliares para construir los casos